[gd_scene load_steps=9 format=2]

[ext_resource path="res://images/Color_52_Faces_v.2.0.png" type="Texture" id=1]
[ext_resource path="res://aceofclubs.gd" type="Script" id=2]
[ext_resource path="res://cards.gd" type="Script" id=3]
[ext_resource path="res://table.gd" type="Script" id=4]
[ext_resource path="res://bgselector.gd" type="Script" id=5]
[ext_resource path="res://bgarea.gd" type="Script" id=6]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 112, 157 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 112.5, 157 )

[node name="table" type="Node"]
script = ExtResource( 4 )

[node name="cards" type="Node2D" parent="."]
script = ExtResource( 3 )
__meta__ = {
"_edit_horizontal_guides_": [ 1092.41 ],
"_edit_vertical_guides_": [ 469.48 ]
}

[node name="aceofclubs" type="Area2D" parent="cards"]
z_as_relative = false
script = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="cards/aceofclubs"]
visible = false
position = Vector2( 112, 157 )
shape = SubResource( 1 )

[node name="backs" type="Node2D" parent="cards/aceofclubs"]

[node name="redback" type="Sprite" parent="cards/aceofclubs/backs"]
visible = false
texture = ExtResource( 1 )
centered = false
region_enabled = true
region_rect = Rect2( 3626, 2503, 225, 314 )

[node name="face" type="Sprite" parent="cards/aceofclubs"]
texture = ExtResource( 1 )
centered = false
region_enabled = true
region_rect = Rect2( 468, 1092, 225, 314 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -608.0
margin_top = -180.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SpriteList" type="RichTextLabel" parent="VBoxContainer"]
visible = false
margin_right = 608.0
margin_bottom = 88.0
size_flags_horizontal = 3
size_flags_vertical = 3
scroll_active = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Status" type="RichTextLabel" parent="VBoxContainer"]
margin_right = 608.0
margin_bottom = 180.0
size_flags_horizontal = 3
size_flags_vertical = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="."]
anchor_top = 1.0
anchor_bottom = 1.0
margin_top = -36.0
margin_right = 780.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="stack cards" type="Button" parent="HBoxContainer"]
margin_right = 257.0
margin_bottom = 36.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "stack cards"

[node name="shuffle cards" type="Button" parent="HBoxContainer"]
margin_left = 261.0
margin_right = 518.0
margin_bottom = 36.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "shuffle stack"

[node name="change back" type="Button" parent="HBoxContainer"]
margin_left = 522.0
margin_right = 780.0
margin_bottom = 36.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "Change Card Back"

[node name="bgselector" type="Node2D" parent="."]
visible = false
script = ExtResource( 5 )

[node name="Color_52_Faces_v20" type="Sprite" parent="bgselector"]
position = Vector2( 51.2798, 58.957 )
texture = ExtResource( 1 )
centered = false
region_enabled = true
region_rect = Rect2( 990, 2500, 1820, 320 )

[node name="bgarea" type="Area2D" parent="bgselector/Color_52_Faces_v20"]
script = ExtResource( 6 )

[node name="bgshape" type="CollisionShape2D" parent="bgselector/Color_52_Faces_v20/bgarea"]
position = Vector2( 118, 163 )
shape = SubResource( 2 )
[connection signal="input_event" from="cards/aceofclubs" to="cards/aceofclubs" method="_on_aceofclubs_input_event"]
[connection signal="input_event" from="cards/aceofclubs" to="cards" method="_on_aceofclubs_input_event"]
[connection signal="mouse_entered" from="cards/aceofclubs" to="cards/aceofclubs" method="_on_aceofclubs_mouse_entered"]
[connection signal="mouse_exited" from="cards/aceofclubs" to="cards/aceofclubs" method="_on_aceofclubs_mouse_exited"]
[connection signal="button_up" from="HBoxContainer/stack cards" to="." method="_on_stack_cards_button_up"]
[connection signal="button_up" from="HBoxContainer/shuffle cards" to="." method="_on_shuffle_cards_button_up"]
[connection signal="button_up" from="HBoxContainer/change back" to="." method="_on_change_back_button_up"]
[connection signal="input_event" from="bgselector/Color_52_Faces_v20/bgarea" to="bgselector/Color_52_Faces_v20/bgarea" method="_on_bgarea_input_event"]
